--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray_blue">#547CE0</color>
+    <color name="light_green">#3DFF37</color>
+    <color name="light_gray">#383737</color>
+    <color name="dark_gray">#242424</color>
+    <color name="dark_white">#C1BDBD</color>
 </resources>
