--- a/app/src/main/res/layout/fragment_output.xml
+++ b/app/src/main/res/layout/fragment_output.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="10dp"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="500dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
